// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card matches the snapshot 1`] = `undefined`;

exports[`Card should return a people card when passed an object with property of homeworld 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    info={
        Object {
            "homeworld": "Tatooine",
            "name": "Luke Skywalker",
            "population": "200000",
            "species": "Human",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1>
          Name: 
          Luke Skywalker
</h1>,
        <h1>
          Home World: 
          Tatooine
</h1>,
        <h1>
          Species: 
          Human
</h1>,
        <h1>
          Population: 
          200000
</h1>,
        <button
          onClick={[Function]}
>
          favorite
</button>,
      ],
      "className": "card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Name: ",
            "Luke Skywalker",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Name: ",
          "Luke Skywalker",
        ],
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Home World: ",
            "Tatooine",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Home World: ",
          "Tatooine",
        ],
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Species: ",
            "Human",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Species: ",
          "Human",
        ],
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Population: ",
            "200000",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Population: ",
          "200000",
        ],
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "favorite",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "favorite",
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            Name: 
            Luke Skywalker
</h1>,
          <h1>
            Home World: 
            Tatooine
</h1>,
          <h1>
            Species: 
            Human
</h1>,
          <h1>
            Population: 
            200000
</h1>,
          <button
            onClick={[Function]}
>
            favorite
</button>,
        ],
        "className": "card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Name: ",
              "Luke Skywalker",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Name: ",
            "Luke Skywalker",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Home World: ",
              "Tatooine",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Home World: ",
            "Tatooine",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Species: ",
              "Human",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Species: ",
            "Human",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Population: ",
              "200000",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Population: ",
            "200000",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "favorite",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "favorite",
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card should return a planets card when passed an object with a property of terrain 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    info={
        Object {
            "climate": "temperate",
            "name": "Alderaan",
            "population": "2000000000",
            "residents": Array [
              "Leia Organa",
              "Bail Prestor Organa",
              "Raymus Antilles",
            ],
            "terrain": "grasslands, mountains",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1>
          Name: 
          Alderaan
</h1>,
        <h1>
          Terrain: 
          grasslands, mountains
</h1>,
        <h1>
          Population: 
          2000000000
</h1>,
        <h1>
          Climate: 
          temperate
</h1>,
        <h1>
          Residents: 
</h1>,
        <button
          onClick={[Function]}
>
          favorite
</button>,
      ],
      "className": "card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Name: ",
            "Alderaan",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Name: ",
          "Alderaan",
        ],
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Terrain: ",
            "grasslands, mountains",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Terrain: ",
          "grasslands, mountains",
        ],
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Population: ",
            "2000000000",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Population: ",
          "2000000000",
        ],
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Climate: ",
            "temperate",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Climate: ",
          "temperate",
        ],
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Residents: ",
            Array [
              undefined,
              undefined,
              undefined,
            ],
          ],
        },
        "ref": null,
        "rendered": Array [
          "Residents: ",
          undefined,
          undefined,
          undefined,
        ],
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "favorite",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "favorite",
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            Name: 
            Alderaan
</h1>,
          <h1>
            Terrain: 
            grasslands, mountains
</h1>,
          <h1>
            Population: 
            2000000000
</h1>,
          <h1>
            Climate: 
            temperate
</h1>,
          <h1>
            Residents: 
</h1>,
          <button
            onClick={[Function]}
>
            favorite
</button>,
        ],
        "className": "card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Name: ",
              "Alderaan",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Name: ",
            "Alderaan",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Terrain: ",
              "grasslands, mountains",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Terrain: ",
            "grasslands, mountains",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Population: ",
              "2000000000",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Population: ",
            "2000000000",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Climate: ",
              "temperate",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Climate: ",
            "temperate",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Residents: ",
              Array [
                undefined,
                undefined,
                undefined,
              ],
            ],
          },
          "ref": null,
          "rendered": Array [
            "Residents: ",
            undefined,
            undefined,
            undefined,
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "favorite",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "favorite",
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card should return a vehicle card when passed an object with a property of passengers 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    info={
        Object {
            "class": "wheeled",
            "model": "Digger Crawler",
            "name": "Sand Crawler",
            "passengers": "30",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1>
          Name: 
          Sand Crawler
</h1>,
        <h1>
          Model: 
          Digger Crawler
</h1>,
        <h1>
          Class: 
          wheeled
</h1>,
        <h1>
          Passengers: 
          30
</h1>,
        <button
          onClick={[Function]}
>
          favorite
</button>,
      ],
      "className": "card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Name: ",
            "Sand Crawler",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Name: ",
          "Sand Crawler",
        ],
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Model: ",
            "Digger Crawler",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Model: ",
          "Digger Crawler",
        ],
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Class: ",
            "wheeled",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Class: ",
          "wheeled",
        ],
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Passengers: ",
            "30",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Passengers: ",
          "30",
        ],
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "favorite",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "favorite",
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            Name: 
            Sand Crawler
</h1>,
          <h1>
            Model: 
            Digger Crawler
</h1>,
          <h1>
            Class: 
            wheeled
</h1>,
          <h1>
            Passengers: 
            30
</h1>,
          <button
            onClick={[Function]}
>
            favorite
</button>,
        ],
        "className": "card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Name: ",
              "Sand Crawler",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Name: ",
            "Sand Crawler",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Model: ",
              "Digger Crawler",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Model: ",
            "Digger Crawler",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Class: ",
              "wheeled",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Class: ",
            "wheeled",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Passengers: ",
              "30",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Passengers: ",
            "30",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "favorite",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "favorite",
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
